# of_core_windows

./: CMakeLists.txt  README.md
configs/: default
include/ofc_windows/: config.h.in  event_windows.h  fs_windows.h  socket_windows.h
src/: backtrace_windows.c  console_windows.c  env_windows.c  event_windows.c  lock_windows.c  net_windows.c  process_windows.c  socket_windows.c  thread_windows.c  time_windows.c  waitset_windows.c
